--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
